feat(app): complete basic authentication and user crud
